--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,7 +11,7 @@
 #   - dist/**/*.js
 #
 src_files:
-  - public/javascripts/jquery.js
+  - public/javascripts/jquery.min.js
   - public/javascripts/jquery-ui.js
   - public/javascripts/rails.js
   - public/javascripts/application.js
