--- a/db/data/sections.yml
+++ b/db/data/sections.yml
@@ -1,70 +1,75 @@
 -
   id: 1
   parent_id: 12
-  name: Edustusjoukkue
+  name: Edustus
   slug: miehet-edustus
 -
   id: 2
   parent_id: 12
-  name: Kakkosjoukkue
-  slug: miehet-kakkonen
+  name: Miehet II
+  slug: miehet-ii
 -
   id: 3
-  parent_id: 13
+  parent_id: 14
   name: B-Pojat
   slug: pojat-b
 -
   id: 4
-  parent_id: 13
+  parent_id: 14
   name: C1-Pojat
   slug: pojat-c1
 -
   id: 5
-  parent_id: 13
+  parent_id: 14
   name: D-Pojat
   slug: pojat-d
 -
   id: 6
-  parent_id: 0
-  name: Naiset
-  slug: naiset
+  parent_id: 13
+  name: Naiset edustus
+  slug: naiset-edustus
 -
   id: 7
-  parent_id: 14
+  parent_id: 15
   name: B-Tytöt
   slug: tytot-b
 -
   id: 8
   parent_id: 12
   name: Miehet III
-  slug: miehet-kolmonen
+  slug: miehet-iii
 -
   id: 9
-  parent_id: 13
+  parent_id: 14
   name: C2-Pojat
   slug: pojat-c2
 -
   id: 10
-  parent_id: 14
+  parent_id: 15
   name: C-Tytöt
   slug: tytot-c
 -
   id: 11
-  parent_id: 14
+  parent_id: 15
   name: D-Tytöt
   slug: tytot-d
 -
   id: 12
-  parent_id: 0
+  parent_id:
   name: Miehet
   slug: miehet
 -
   id: 13
-  parent_id: 0
+  parent_id:
+  name: Naiset
+  slug: naiset
+-
+  id: 14
+  parent_id:
   name: Pojat
   slug: pojat
 -
-  id: 14
-  parent_id: 0
+  id: 15
+  parent_id:
   name: Tytöt
   slug: tytot
